--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,7 @@
 [versions]
 algoutils = "0.7.2"
+javafx = "17.0.1"
+testfx = "4.0.17"
 
 [plugins]
 algomate = { id = "org.tudalgo.algomate", version = "0.6.1" }
@@ -10,3 +12,10 @@ javafxplugin = { id = "org.openjfx.javafxplugin", version = "0.0.14" }
 algoutils-student = { module = "org.tudalgo:algoutils-student", version.ref = "algoutils" }
 algoutils-tutor = { module = "org.tudalgo:algoutils-tutor", version.ref = "algoutils" }
 junit-pioneer = { module = "org.junit-pioneer:junit-pioneer", version = "2.2.0" }
+testfx-core = { module = "org.testfx:testfx-core", version.ref = "testfx" }
+testfx-junit5 = { module = "org.testfx:testfx-junit5", version.ref = "testfx" }
+openjfx-monocle = { module = "org.testfx:openjfx-monocle", version = "jdk-12.0.1+2" }
+hamcrest = { module = "org.hamcrest:hamcrest", version = "2.2" }
+
+[bundles]
+testfx = ["testfx-core", "testfx-junit5", "openjfx-monocle", "hamcrest"]
